--- a/static/css/base.css
+++ b/static/css/base.css
@@ -173,6 +173,20 @@ main {
   background-color: #333 !important;
   color: #fff !important;
 
+footer.footer {
+  background-color: #333;
+  color: #fff;
+}
+
+footer.footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer.footer a:hover {
+  color: #ddd;
+}
+
 @keyframes gradientMove {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
