--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,7 +24,7 @@
             <!-- Right Column: Image -->
             <div class="col-12 col-md-6 text-center">
                 <img src="{{ MEDIA_URL }}home_image.jpg" 
-                alt="Design preview" 
+                alt="Showing designs in studio" 
                 class="img-fluid rounded" 
                 style="max-width: 60%; height: auto;">
             </div>
